chore: minor wording updates

--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -12,6 +12,12 @@
     font-style: italic;
 }
 
+.app-description {
+    margin-top: 5vh;
+    line-height: 1.5em;
+    text-align: center;
+}
+
 .emailFormField {
     display: block;
     width: 80%;
