--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -2,22 +2,32 @@
     <div>
         <h1 class="headline">"In life's ever-unfolding tale, we often lose sight of the precious moments that define
             us."</h1>
+        <p class="app-description">Welcome to Hayati , your personal diary
+            that will remind you every day of the past.
+            Immerse yourself in your memories as we
+            present you with entries from one, two,
+            three, or more years ago. Your virtual time
+            travel companion is here to help you explore
+            the exciting chapters of your life. Let's
+            embark on this journey through time
+            together!“
+        </p>
         <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="form-widget">
             <mat-form-field class="emailFormField" *ngIf="!codeRequested">
                 <mat-label>Email</mat-label>
                 <input type="email" formControlName="email" matInput>
-                <mat-hint align="start"><strong>We will send a code to your email address.</strong> </mat-hint>
+                <mat-hint align="start"><strong>We will send a login code to your email address.</strong> </mat-hint>
             </mat-form-field>
             <div *ngIf="codeRequested" class="emailRequestedCode" (click)="codeRequested = false">
                 <h2>{{ signInForm.value.email }}</h2>
             </div>
             <mat-form-field class="otpFormField" *ngIf="codeRequested">
-                <mat-label>OTP</mat-label>
+                <mat-label>Login code</mat-label>
                 <input type="text" formControlName="otp" matInput maxlength="6" minlength="6">
             </mat-form-field>
             <div class="buttonBar">
                 <button type="submit" class="button block" [disabled]="loading" mat-raised-button color="primary">
-                    {{ loading ? 'Loading' : codeRequested ? 'Login' : 'Request OTP' }}
+                    {{ loading ? 'Loading' : codeRequested ? 'Login' : 'Request Code' }}
                 </button>
             </div>
         </form>
