fix: minor typo

--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -2,7 +2,7 @@
     <div>
         <h1 class="headline">"In life's ever-unfolding tale, we often lose sight of the precious moments that define
             us."</h1>
-        <p class="app-description">Welcome to Hayati , your personal diary
+        <p class="app-description">Welcome to Hayati, your personal diary
             that will remind you every day of the past.
             Immerse yourself in your memories as we
             present you with entries from one, two,
@@ -10,7 +10,7 @@
             travel companion is here to help you explore
             the exciting chapters of your life. Let's
             embark on this journey through time
-            together!“
+            together!
         </p>
         <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" class="form-widget">
             <mat-form-field class="emailFormField" *ngIf="!codeRequested">
